invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_32.src
.IPPcode24
LT LF@a int@49